@@ -5,11 +5,14 @@ import edu.princeton.cs.algs4.StdRandom;
 import edu.princeton.cs.algs4.StdStats;
 
 public class PercolationStats {
-    private double[] xs;
-    private int trials;
+    private final double[] xs;
+    private final int trials;
+    private final double CONSTANT_1_96 = 1.96;
 
     // perform trials independent experiments on an n-by-n grid
     public PercolationStats(int n, int trials) {
+        if (n <= 0 || trials <= 0)
+            throw new java.lang.IllegalArgumentException("n or trials is Illegal Argument");
         this.trials = trials;
         xs = new double[trials];
         for (int i = 0; i < xs.length; i++) {
@@ -18,10 +21,9 @@ public class PercolationStats {
                 int row = StdRandom.uniform(n) + 1;
                 int col = StdRandom.uniform(n) + 1;
                 percolation.open(row, col);
-                percolation.isFull(row,col);
+                percolation.isFull(row, col);
             }
-            double x = (double) percolation.numberOfOpenSites() / (n * n);
-            xs[i] = x;
+            xs[i] = ((double) percolation.numberOfOpenSites()) / (n * n);
         }
     }
 
@@ -37,21 +39,20 @@ public class PercolationStats {
 
     // low  endpoint of 95% confidence interval
     public double confidenceLo() {
-        return mean() - (double)1.96 * stddev() / (double)Math.sqrt(trials);
+        return mean() - CONSTANT_1_96 * stddev() / Math.sqrt(trials);
     }
 
 
     // high endpoint of 95% confidence interval
     public double confidenceHi() {
-        return mean() + (double)1.96 * stddev() /(double) Math.sqrt(trials);
+        return mean() + CONSTANT_1_96 * stddev() / Math.sqrt(trials);
     }
 
 
     public static void main(String[] args) {
-        PercolationStats percolationStats = new PercolationStats(Integer.valueOf(args[0]), Integer.valueOf(args[1]));
+        PercolationStats percolationStats = new PercolationStats(new Integer(args[0]).intValue(), new Integer(args[1]).intValue());
         StdOut.println("mean                    = " + percolationStats.mean());
         StdOut.println("stddev                  = " + percolationStats.stddev());
         StdOut.println("95% confidence interval = [" + percolationStats.confidenceLo() + "," + percolationStats.confidenceHi() + "]");
-
     }
 }
